--- a/web-app/css/demo.css
+++ b/web-app/css/demo.css
@@ -5,7 +5,9 @@
 body {
 	width:100%;
 	height:100%;
-	background:url("../images/bg.jpg") 0 0 repeat;
+	background:url("../images/bg.jpg") 0 0 repeat ;
+    /*background-size:cover;*/
+    /*background-repeat:no-repeat;*/
 	margin:0;
 	padding:0;
 }
